--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "weather-finder",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kishorchouhan.github.io/Weather-App",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
